@@ -1,3 +1,11 @@
+2009-09-29  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/AllGeneric.R: rcond is implicit generic in latest versions of R
+
+2009-09-23  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* DESCRIPTION (Version): 0.999375-31, CRAN-released:
+
 2009-09-22  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* R/Ops.R (A.M.n,A.n.M): replace "Ops" methods by explicit "Arith",
@@ -6,8 +14,6 @@
 	* tests/group-methods.R: test these systematically.
 
 2009-09-18  Martin Maechler  <maechler@stat.math.ethz.ch>
-
-	* DESCRIPTION (Version): 0.999375-31, CRAN-released: 2009-09-...
 
 	* inst/include/Matrix_stubs.c (M_R_cholmod_start): print_function = NULL
 	as in src/chm_common.c (2009-07-20)
